--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Git Workflow, Centralized</title>
 	</head>
 	<body>
-		<h1>Git Workflow, Centralized</h1>
+        <h1>Git Workflow, Centralized</h1>
+        <img src="https://gph.is/191zeP3" alt=”Ben” >
 	</body>
 </html>
